2010-09-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Fix pointer arithmetic.

2010-09-27  Dustin J. Mitchell <dustin@zmanda.com>
	* man/Makefile.am man/xml-source/amanda-match.7.xml: new manpage with
	  descriptions of match expressions
	* man/xml-source/amadmin.8.xml man/xml-source/amanda.8.xml
	  man/xml-source/amdump.8.xml man/xml-source/amfetchdump.8.xml
	  man/xml-source/amflush.8.xml man/xml-source/amrestore.8.xml
	  man/xml-source/amvault.8.xml: reference it

2010-09-27  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/util.c common-src/util.h: support ##.## in braced
	  alternates
	* installcheck/Amanda_Util.pl: test it
	* perl/Amanda/Util.pod man/xml-source/amanda-changers.7.xml
	  man/xml-source/amanda-devices.7.xml: document it

2010-09-27  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, client-src/client_util.c,
	  client-src/selfcheck.c, client-src/sendsize.c, common-src/amxml.c,
	  common-src/amxml.h, common-src/glib-util.c, common-src/glib-util.h,
	  common-src/security-util.c, common-src/util.c,
	  perl/Amanda/Tapelist.swg, server-src/amcheck.c, server-src/amtrmidx.c,
	  server-src/chunker.c, server-src/diskfile.c, server-src/driver.c,
	  server-src/driverio.c, server-src/dumper.c, server-src/find.c,
	  server-src/holding.c, server-src/planner.c, server-src/server_util.c,
	  server-src/xfer-source-holding.c: Fix memory leak.

2010-09-25  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/alloc.c: remove amtable functions
	* common-src/amanda.h: remove prototypes

2010-09-24  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: Check root can cd to the directory.

2010-09-24  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Correctly print new tapes to use.
	* installcheck/catalogs/filesystemstaped.cat: write the tapelist file
	* installcheck/amreport.pl: Test it.

2010-09-24  Dustin J. Mitchell <dustin@zmanda.com>